fix bug on brand is too long

--- a/intramirror-frontend/admin-frontend/css/content-management.css
+++ b/intramirror-frontend/admin-frontend/css/content-management.css
@@ -171,3 +171,5 @@ input.stock-input {
     text-overflow:ellipsis;
     white-space: nowrap;
 }
+
+.disp-brand {display:block;white-space:nowrap; overflow:hidden; text-overflow:ellipsis;}
